# hash-bench

./: Cargo.toml  README.md
benches/: hash128.rs  hash256.rs  hash64.rs
src/: highwayhash.rs  k12.rs  k12_simplified.rs  lib.rs  main.rs
